added hours, minutes, seconds, and milliseconds display

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Days of Trump Left</title>
+        <title>Time Left in Trump's Term</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <script src="scr.js" type="text/javascript"></script>
@@ -9,21 +9,25 @@
             .centered{
                 text-align: center;
             }
+            .centered-display{
+                text-align: center;
+            }
 
             #main-header{
-                font-size: 2em;
+                font-size: 2.1em;
             }
         </style>
     </head>
 
     <body>
-        <div id="count-down">
-            <h1 class="centered" id="main-header">Days Left in Trump's Term</h1>
+        <div class="centered" id="count-down">
+            <h1 class="centered" id="main-header">Time Left in Trump's Term</h1>
             <hr/>
-            <h1 class="centered" id="clock"></h1>   
+            
         </div>
         
         <script>
+            displayInit();
             timer = setInterval(updateDisplay, 100);    
         </script>
     </body>
